# bthesis-tennisball

./: README.md
docs/: btech-tennisball-diagram.xml
docs/presentation/scripts/: macro_video.sh
embedded_linux_files/: README.md  rc.local
embedded_linux_files/fex/: README.md  script-fev2016.fex  script-original.fex
http_controller/: imgCam.html  index.html  style.css
opencv_stuff/: README.md  cap_v4l.cpp_patch
opencv_stuff/capture_libraries/beldenfox/: CMakeCache.txt  CMakeLists.txt  Makefile  OCVCapture.cpp  camera  camera.cpp  cmake_install.cmake
opencv_stuff/capture_libraries/martin_fox_modded/: CMakeLists.txt  OCVCapture.cpp  OCVCapture.h  camera.cpp  default_camera  make_this.sh  neon_camera
opencv_stuff/non_opencv_methods/beldenfox-cvcapture-a05dbbef5e3e/: .hg_archival.txt  CMakeCache.txt  Makefile  camera  camera.cpp  cmake_install.cmake
python_server/: pcduino_gpio.py  tcp_server.py
python_server/misc/: i2c_arduino.py  mthread_python_server.py
tennisball_application/: Makefile  OCVCapture_MJPEG.cpp  OCVCapture_YUYV.cpp  application.cpp  cmd.cpp  ctrl.cpp  histogram.cpp  http.cpp  libcam.cpp  monster_shield.cpp  new_contour_method.cpp  relay.cpp  run_debug  server.cpp  servo.cpp  shell.cpp  tasks.cpp
tennisball_application/conf/: Makefile  conf.cpp  lookup.cpp
tennisball_application/include/: OCVCapture_MJPEG.h  OCVCapture_YUYV.h  application.h  cmd.h  conf.h  ctrl.h  debug.h  defines.h  histogram.h  http.h  i2c_libs.h  monster_shield.h  new_contour_method.h  pcduino.sublime-workspace  relay.h  server.h  servo.h  tasks.h
(+38 files in other folders)
